--- a/server/.env
+++ b/server/.env
@@ -10,5 +10,5 @@ Base_URL = "http://localhost:5000"
 PORT = 5000
 
 #DB url
-DB_URL = "mongodb://localhost:27017/BookMyHostel"
+DB_URL = "mongodb://127.0.0.1:27017/BookMyHostel"
 
