--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
+    "axios": "^1.4.0",
     "framer-motion": "^10.5.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "react-scrollable-feed": "^1.3.2",
     "web-vitals": "^3.3.0"
