--- a/server/.env
+++ b/server/.env
@@ -10,6 +10,6 @@ Base_URL = "http://localhost:5000"
 PORT = 5000
 
 #DB url
-DB_URL = "mongodb://127.0.0.1:27017/BookMyHostel"
+DB_URL = "mongodb+srv://StayInCluster0:nIyatS@cluster0.pfxktto.mongodb.net/?retryWrites=true&w=majority"
 
-JWT_SECRET_TOKEN = "Ok"
+JWT_SECRET_TOKEN = "nIyatS"
